# project_manager

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-cd.yml  test.yml
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
nginx/: nginx.conf
project_manager/projects/: apps.py
project_manager/tasks/: apps.py  models.py
project_manager/tasks/migrations/: 0001_initial.py
project_manager/users/: apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
project_manager/users/migrations/: 0001_initial.py  0002_alter_user_is_active.py
project_manager/users/templates/users/email/: base.html  confirm_email.html  reset_password.html
project_manager/workspaces/: admin.py  apps.py  models.py
project_manager/workspaces/migrations/: 0001_initial.py  0002_rename_content_list_description_and_more.py  0003_rename_list_tasklist.py
tests/: conftest.py  factories.py
tests/users/: test_email_verify.py  test_login.py  test_password.py  test_registration.py  test_user_detail.py
